--- a/Spotify_Data_Pipeline_Project.ipynb
+++ b/Spotify_Data_Pipeline_Project.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id = '2d9b2643d77f492dab35258631390966' , client_secret = 'a30c261c268b40249d2d46379596efba')"
+    "client_credentials_manager = SpotifyClientCredentials(client_id = '' , client_secret = '')"
    ]
   },
   {
